--- a/functions/views/page-template.hbs
+++ b/functions/views/page-template.hbs
@@ -5,25 +5,41 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Settlers of Catan</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.css"/>
+        <link rel="stylesheet" href="assets/styles/style.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.min.js"></script>
     </head>
 
     <body class="ui header teal">
 
-        <div class="ui top fixed menu">
-        <div class="item">
-            <img src="../images/logo.png">
-        </div>
+        <div class="ui inverted top fixed menu">
 
-        <a class="item ui header teal" href="#">Start a New Game</a>
-        <a class="item ui header teal" href="#">Join Existing Game</a>
-        <a class="item ui header teal" href="./log-in">Log-in</a>
-        <a class="item ui header teal" href="#">Register</a>
-        <div class="item ui right header blue">
+        <img class="fit-size" src="assets/images/logo.png">
+
+
+        <a class="item ui header yellow" href="#">
+          <i class="announcement icon"></i>
+          Start a New Game
+        </a>
+        <a class="item ui header yellow" href="#">
+          <i class="game icon"></i>
+          Join Existing Game
+        </a>
+        <a class="item ui header yellow" href="./log-in"0>
+          <i class="user icon"></i>
+          Log-in
+        </a>
+        <a class="item ui header yellow" href="#">
+          <i class="add user icon"></i>
+          Register
+        </a>
+        <div class="item ui right header orange">
             <!--<?php if(isset($userName)) echo "Wellcome ".$userName; ?>-->
         </div>
-        <a class="item ui header blue" href="log-out.php">Sign-out</a>
+        <a class="item ui header orange" href="log-out.php">
+          <i class="remove user icon"></i>
+          Sign-out
+        </a>
 
         </div>
         <p> .
