added partials hbs control

--- a/functions/views/log-in.hbs
+++ b/functions/views/log-in.hbs
@@ -1,9 +1,10 @@
-
+{{> header}}
+<br /><br /><br />
 <div class="ui middle aligned center aligned grid">
   <div class="column">
 
-    <h2 class="ui teal image header">
-      <img src="../images/logo.png" class="image">
+    <h2 class="ui image header">
+      <img src="assets/images/icon.png" class="image">
       <div class="content">
         Log-in to your account
       </div>
@@ -22,7 +23,7 @@
             <input type="password" name="password" placeholder="Password">
           </div>
         </div>
-        <div class="ui fluid large teal submit button">Login</div>
+        <div class="ui fluid large orange submit button">Login</div>
       </div>
       <div class="ui error message"></div>
     </form>
@@ -34,9 +35,9 @@
 </div>
 
 
-
  <style type="text/css">
     .column {
       max-width: 450px;
     }
   </style>
+{{> footer}}
