--- a/functions/views/partials/header.hbs
+++ b/functions/views/partials/header.hbs
@@ -15,7 +15,7 @@
 
         <div class="ui inverted top fixed menu">
 
-        <img class="fit-size" src="assets/images/logo.png">
+        <img class="logo-size" src="assets/images/logo.png">
 
 
         <a class="item ui header yellow" href="#">
@@ -45,9 +45,3 @@
         </div>
         <p> .
         </p>
-
-        {{main}}
-
-
-    </body>
-</html>
