--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -3,10 +3,15 @@ body {
     to right bottom,
     #ffd800 0%,#fc7a15 9%,#ff081a 17%,#fc7a15 26%,#ffd800 41%,#ffd800 56%,#fc7a15 75%,#fc7a15 87%,#ff081a 100%
     );
+    background-image: url("../images/background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-.fit-size {
+.logo-size {
   height: 2.85714286em;
   margin: 10px;
-  
+
 }
